--- a/application/app/views/index.ejs
+++ b/application/app/views/index.ejs
@@ -25,6 +25,7 @@
     <h1>Welcome to the Sparta Test Application</h1>
     <img src="/images/squarelogo.jpg" />
     <h2>The app is running correctly.</h2>
+    <p>I've heard it throught the pipeline.</p>
     
   </div>
 </body>
